# crowdstrike-cloudproto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: framing.rs  lib.rs  services.rs
src/framing/: hdr_version.rs  packet.rs  socket.rs
src/services/: lfo.rs  ts.rs
src/services/lfo/: client.rs  file_header.rs  pkt_kind.rs  request.rs  response.rs
src/services/ts/: acceptor.rs  event.rs  pkt_kind.rs  socket.rs
