[package]
name = "crowdstrike-cloudproto"
description = "The binary protocol used between Crowdstrike’s Falcon Sensor and cloud servers"
repository = "https://github.com/tux3/crowdstrike-cloudproto/"
categories = ["network-programming", "api-bindings"]
keywords = ["async", "api", "protocol"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
futures-util = { version = "0.3.23", features = ["sink"] }
bytes = "1.2.1"
byteorder = "1.4.3"
thiserror = "1.0.32"
tracing = "0.1.36"
strum = "0.24.1"
strum_macros = "0.24.3"
hex = "0.4.3"
crc32fast = "1.3.2"
xz2 = { version = "0.1.7", features = ["static"], optional = true }
sha2 = { version = "0.10.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread"] }
rand = "0.8.5"
anyhow = "1.0.62"
test-log = { version = "0.2.11", features = ["trace"], default-features = false }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
sha2 = { version = "0.10.2" }

[features]
default = ["lfo-compress-xz", "lfo-check-hash"]
lfo-compress-xz = ["dep:xz2"]
# This is not strictly necessary if you carry CloudProto over TLS, and there is either way still a CRC check
lfo-check-hash = ["dep:sha2"]
